# document-generator

./: .gitignore  README.md  README_en.md  pyproject.toml  run-web.bat
config/: data_transformation_rules.json
examples/: Таблица для заполнения.xlsx
logs/fastapi/: 2026.06.25_01.40.09_log.txt  2026.06.25_01.40.12_log.txt  2026.06.25_02.37.35_log.txt  2026.06.25_02.45.18_log.txt  2026.06.25_03.22.27_log.txt  2026.06.25_03.23.00_log.txt  2026.06.25_03.26.16_log.txt  2026.06.25_03.26.18_log.txt  2026.06.25_03.26.20_log.txt  2026.06.25_03.26.25_log.txt
logs/streamlit/: 2026.06.24_23.12.46_log.txt  2026.06.24_23.26.12_log.txt  2026.06.24_23.31.28_log.txt  2026.06.25_00.44.40_log.txt  2026.06.25_00.53.35_log.txt  2026.06.25_01.27.32_log.txt  2026.06.25_02.37.37_log.txt  2026.06.25_02.45.20_log.txt  2026.06.25_03.22.28_log.txt  2026.06.25_03.29.33_log.txt
src/core/data_loading/: data_loader.py  data_loader_report.py
src/core/data_transformation/: common_enums.py  data_transformation_report.py  data_transformer.py  transformation_rule.py
src/core/data_transformation/transformation_rules/: date_part_getter_rule.py  name_declension_rule.py  name_part_getter_rule.py  name_shortener_rule.py  num_to_words_rule.py
src/core/document_generation/: document_generation_report.py  document_generator.py  word_page_counter.py
src/core/exceptions/: application_error.py
src/core/utils/: json_utils.py  path_utils.py
src/shared/logging/: init_logging.py
src/shared/settings/: app_settings.py
src/web/: settings.py
src/web/api/: main_api.py
src/web/frontend/: app.py
(+6 files in other folders)
