[project]
name = "my_app"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.2.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pywin32>=305",
]

[project.optional-dependencies]
desktop = [
    "PyQt6>=6.6.1",
]
web = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "streamlit>=1.31.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"